# terminus

./: BUILDING  CMakeLists.txt  HISTORY.md  PKGBUILD  README.md  meson.build  meson_options.txt  multipackager.sh  terminus.avprj
data/: CMakeLists.txt  com.rastersoft.terminus.service.base  extras.gresource.xml  org.rastersoft.terminus.gschema.xml  terminus.desktop  terminus_autorun.desktop  terminus_showhide.sh
data/dbus/: CMakeLists.txt
data/icons/: CMakeLists.txt
data/interface/: properties.ui
data/local/: CMakeLists.txt  black_on_light_yellow.color_scheme  black_on_white.color_scheme  dark_solar.color_scheme  gray_on_black.color_scheme  green_on_black.color_scheme  light_solar.color_scheme  linux_console.color_scheme  orange_on_black.color_scheme  prueba.color_scheme  rxvt.color_scheme  solar.color_scheme  solarized.color_scheme  tango.color_scheme  terminal.color_scheme  white_on_black.color_scheme
debian/: changelog  control  copyright  postinst  postrm  prerm  rules
debian32/: changelog  control
doc/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in  es.po  meson.build  terminus.pot
rpmbuild/SPECS/: terminus.spec
src/: CMakeLists.txt  PanedPercentage.vala  base.vala  bindkeys.vala  checkwayland.c  checkwayland.vapi  container.vala  meson.build  notetab.vala  settings.vala  terminal.vala  terminus.vala  terminusbase.vala  terminuswindow.vala  window.vala
src/vapidir/: keybinder-3.0.vapi
terminus_gnome_shell/: CMakeLists.txt  extension.js  metadata.json
